@@ -45,6 +45,8 @@ set(CORE_SRC
     ${CMAKE_CURRENT_LIST_DIR}/CoreLoadsFilm.hpp
     ${CMAKE_CURRENT_LIST_DIR}/CoreLoadsRadiation.cpp
     ${CMAKE_CURRENT_LIST_DIR}/CoreLoadsRadiation.hpp
+    ${CMAKE_CURRENT_LIST_DIR}/CoreLoadsSurfaceTraction.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/CoreLoadsSurfaceTraction.hpp
     ${CMAKE_CURRENT_LIST_DIR}/CoreBCsDisplacements.cpp
     ${CMAKE_CURRENT_LIST_DIR}/CoreBCsDisplacements.hpp
     ${CMAKE_CURRENT_LIST_DIR}/CoreBCsTemperatures.cpp
