@@ -125,3 +125,4 @@
 ######### ------  Release 2024.12
 
 2025-01-04 changing cubit version to 2025.1, sending silent commands needs to be updated, windows history bug is now fixed
+2025-01-05 working on implementing surface traction load
